--- a/.github/workflows/docker-build-deploy.yml
+++ b/.github/workflows/docker-build-deploy.yml
@@ -45,7 +45,7 @@ jobs:
 
     steps:
     - name: Deploy container image to Azure Web App
-      id: deploy-to-prod
+      id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'hia-search'
