--- a/example.env
+++ b/example.env
@@ -7,5 +7,6 @@ AZURE_OPENAI_ENDPOINT=...
 OPENAI_API_KEY=...
 OPENAI_API_VERSION=...
 MODEL_EMBEDDINGS=...
-MODEL_QA=...
 APPLICATIONINSIGHTS_CONNECTION_STRING=...
+MSCOGNITIVE_KEY=...
+MSCOGNITIVE_LOCATION=...
