--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/rodekruis/hia-search"
 packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.12,<3.13"
 azure-identity = "*"
 azure-monitor-opentelemetry-exporter = "*"
 azure-search-documents = "*"
