--- a/example.env
+++ b/example.env
@@ -1,12 +1,18 @@
 PORT=8000
-API_KEY=...
-VECTOR_STORE_ADDRESS=...
-VECTOR_STORE_PASSWORD=...
-OPENAI_API_TYPE=...
-AZURE_OPENAI_ENDPOINT=...
-OPENAI_API_KEY=...
-OPENAI_API_VERSION=...
-MODEL_EMBEDDINGS=...
-APPLICATIONINSIGHTS_CONNECTION_STRING=...
-MSCOGNITIVE_KEY=...
-MSCOGNITIVE_LOCATION=...
+API_KEY=
+
+VECTOR_STORE_ADDRESS=
+VECTOR_STORE_PASSWORD=
+
+OPENAI_API_TYPE=
+AZURE_OPENAI_ENDPOINT=
+OPENAI_API_KEY=
+OPENAI_API_VERSION=
+
+MODEL_EMBEDDINGS=
+MODEL_QA=
+
+APPLICATIONINSIGHTS_CONNECTION_STRING=
+
+MSCOGNITIVE_KEY=
+MSCOGNITIVE_LOCATION=
