--- a/example.env
+++ b/example.env
@@ -6,6 +6,7 @@ OPENAI_API_TYPE=...
 AZURE_OPENAI_ENDPOINT=...
 OPENAI_API_KEY=...
 OPENAI_API_VERSION=...
+MODEL_CHAT=...
 MODEL_EMBEDDINGS=...
 APPLICATIONINSIGHTS_CONNECTION_STRING=...
 MSCOGNITIVE_KEY=...
