--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ fastapi = "*"
 langchain = "*"
 langchain-community = "*"
 langchain-openai = "*"
+langgraph = "*"
 orjson = "*"
 pandas = "*"
 spacy = "*"
