--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,9 @@ langchain-openai = "*"
 langgraph = "*"
 orjson = "*"
 pandas = "*"
+python-multipart = "*"
 spacy = "*"
+twilio = "*"
 Unidecode = "*"
 
 [build-system]
