refactor: add postgresql checkpoint; add dummy chat endpoint for testing

--- a/example.env
+++ b/example.env
@@ -5,6 +5,10 @@ API_KEY_WRITE=
 VECTOR_STORE_ADDRESS=
 VECTOR_STORE_PASSWORD=
 
+CHECKPOINT_DB_USER=
+CHECKPOINT_DB_PASSWORD=
+CHECKPOINT_DB_HOST=
+
 OPENAI_API_TYPE=
 AZURE_OPENAI_ENDPOINT=
 OPENAI_API_KEY=
