Add langgraph-checkpoint-postgres dependency to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ chromadb = "*"
 clean-text = "*"
 fastapi = "*"
 langchain = "*"
+langgraph-checkpoint-postgres = "*"
 langchain-community = "*"
 langchain-openai = "*"
 langgraph = "*"
