--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ python-multipart = "*"
 spacy = "*"
 twilio = "*"
 Unidecode = "*"
+urllib3 = ">=2.6.0"
 
 [build-system]
 requires = ["poetry-core"]
